--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Java-script-If eles- Solve</title>
+    <script src="app.js" defer></script>
     
 </head>
 <body>
-    <script src="app.js"></script>
+    
 </body>
 </html>
